# tokenizer_domain_special

./: .gitignore  CHANGELOG.md  README.md  _demo_corpus.txt  build_ctok.py  build_ctok_from_corpus.py  data_waf  demo_build_and_load.sh  pyproject.toml  run_ctok_experiment.py  run_ctok_experiment_hydra.py  tokenization_ctok.py  tokenization_ctok_fast.py
_demo_artifact/: README.md  ctok_meta.json  tokenizer_config.json  vocab.json
cit_tokenizers/: __init__.py  contract.py  tokenization_cit.py
cit_tokenizers/cit/: runtime.py  trainer.py
cit_tokenizers/cli/: apply_contract.py  common.py  train_cit.py  (+3 more)
conf/: config.yaml
configs/: ctok_experiment.yaml
ctok_core/: build_ctok.py  build_ctok_from_corpus.py  build_ctok_unigram_artifact.py  hygiene.py  pretokenize.py  test_hygiene.py  tokenization_ctok.py  tokenization_ctok_fast.py
datasets/: README.md  loader.py
design/: 0_abstract.tex  1_introduction.tex  2_background_motivation.tex  3_problem_definition.tex  appendix.tex  paper.tex
docs/: 0_abstract.tex  1_introduction.tex  2_motivation_and_problem_state.tex  3_related_work.tex  4_method.tex  5_experiment.tex  6_conclusion.tex  REPRO_BASELINES.md  ref.bib
dst/: cli.py  dfst.py  tokenizer.py  vocab.py
examples/: sample_corpus.txt
experiments/: common.py  e1_interface.py  e2_equal_compute.py  e3_robustness.py  run_all.py  run_experiment.py
scripts/: run_all_tokenizers.py  run_all_unigram.py  train_tokenizer.py  train_tokenizer_hydra.py  train_unigram_hydra.py  train_waf_unigram.py
tests/: README.md  build_ctok_unigram_artifact.py  test_reversibility.py
(+21 files in other folders)
