[project]
name = "domain-specific-tokenization"
version = "0.1.0"
description = "A deterministic, grammar-guided, and reversible tokenizer framework."
authors = [{ name = "Pu Yang", email = "puyang@uvic.ca" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
dst = "dst.cli:main"
